--- a/css/comment.scss
+++ b/css/comment.scss
@@ -254,6 +254,7 @@ $telFontSize:36px;
                         resize: none;
                         color: $topAndNavColor;
                         font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
+                        outline: none;
                     }
                 }
                 >span {
