--- a/css/com_details.css
+++ b/css/com_details.css
@@ -208,8 +208,8 @@
 
 #middle .section_top .details .color > ul li img {
   display: block;
-  width: 100%;
-  margin-top: 3px;
+  width: 97%;
+  margin: 0 auto;
 }
 
 #middle .section_top .details .color > ul .active {
@@ -237,6 +237,7 @@
 #middle .section_top .details .count input {
   float: left;
   line-height: 39px;
+  height: 39px;
   border: 1px solid #d2d2d2;
   border-right: none;
   text-align: center;
@@ -426,6 +427,7 @@
   font-size: 14px;
   float: left;
   margin-left: 28px;
+  line-height: 23px;
 }
 
 #middle .section_bottom .sidebar .local_search form > input {
