--- a/css/public.scss
+++ b/css/public.scss
@@ -329,6 +329,63 @@ li {
         }
     }
     /*nav end*/
+    // 登录注册页头部css
+    .lore_tbody {
+        width: 100%;
+        height: 144px;
+        background-color: #000;
+        .containe {
+            width: 892px;
+            margin: 0 auto;
+            overflow: hidden;
+            .logo {
+                width: 187px;
+                height: 124px;
+                float: left;
+                margin-right: 18px;
+                img {
+                    width: 100%;
+                }
+            }
+            .title {
+                float: left;
+                overflow: hidden;
+                margin-top: 50px;
+                >h1 {
+                    float: left;
+                    width: 117px;
+                    text-align: center;
+                    color: #fff;
+                    font-size: 21px;
+                    >span:last-of-type {
+                        font-size: 12px;
+                    }
+                }
+                >h2 {
+                    float: left;
+                    border-left: 1px solid #fff;
+                    padding-left: 4px;
+                    font-size: 38.5px;
+                    color: #fff;
+                    margin-left: 8px;
+                    margin-top: 12px;
+                    line-height: 37px;
+                }
+            }
+            >p {
+                clear: both;
+                text-align: right;
+                color: #fff;
+                font-size: $topFontSize;
+                vertical-align: middle;
+                a {
+                    font-size: $topFontSize;
+                    color: #fff;
+                }
+            }
+        }
+    }
+    // 登录注册页头部css end
 }
 
 
