支付成功&失败

--- a/css/register.scss
+++ b/css/register.scss
@@ -17,6 +17,14 @@ $proBottomBgColor:#EEE;
 $bottomColor:#d4d4d4;
 $telFontFamily:Arial;
 $telFontSize:36px;
+@mixin border-radius($size) {
+    -webkit-border-radius: $size;
+    -moz-border-radius: $size;
+    -ms-border-radius: $size;
+    -o-border-radius: $size;
+    border-radius: $size;
+}
+
 #middle {
     background-color: $proBottomBgColor;
     padding: 84px 0;
