真商品详情

--- a/css/pro_details.css
+++ b/css/pro_details.css
@@ -575,257 +575,8 @@
   margin-right: 3px;
 }
 
-#middle .section_bottom .com_main {
+#middle .section_bottom .pro_main {
   overflow: hidden;
   width: 937px;
   padding-top: 27px;
-}
-
-#middle .section_bottom .com_main > h3 {
-  height: 49px;
-  width: 906px;
-  padding-left: 31px;
-  color: #040404;
-  font-size: 16px;
-  line-height: 49px;
-  background-color: #E5E5E5;
-}
-
-#middle .section_bottom .com_main .summary {
-  width: 100%;
-  overflow: hidden;
-}
-
-#middle .section_bottom .com_main .summary .grade {
-  border: 1px solid #aaa;
-  width: 88px;
-  height: 134px;
-  padding-left: 45px;
-  margin-right: 11px;
-  float: left;
-}
-
-#middle .section_bottom .com_main .summary .grade > h5 {
-  font-weight: normal;
-  font-size: 14px;
-  color: #333;
-  margin-top: 38px;
-}
-
-#middle .section_bottom .com_main .summary .grade > span {
-  font-weight: bold;
-  font-size: 40px;
-  color: #B90101;
-  display: block;
-}
-
-#middle .section_bottom .com_main .summary .grade > span i {
-  font-style: normal;
-  font-size: 24px;
-  font-weight: normal;
-}
-
-#middle .section_bottom .com_main .summary > ul {
-  overflow: hidden;
-  float: left;
-  width: 789px;
-  margin-top: 19px;
-}
-
-#middle .section_bottom .com_main .summary > ul li {
-  float: left;
-  margin: 5px 5px 5px 0;
-  border: 1px solid #d2d2d2;
-  color: #999;
-  height: 20px;
-  padding: 0 10px;
-  line-height: 20px;
-  font-size: 14px;
-}
-
-#middle .section_bottom .com_main .sort {
-  width: calc(100% - 28px);
-  height: 35px;
-  padding: 0 14px;
-  background-color: #F2F2F2;
-}
-
-#middle .section_bottom .com_main .sort li {
-  height: 35px;
-  float: left;
-  margin: 0 21px;
-}
-
-#middle .section_bottom .com_main .sort li a {
-  line-height: 35px;
-  display: block;
-  height: 100%;
-  color: #666;
-  font-size: 14px;
-}
-
-#middle .section_bottom .com_main .sort li:last-of-type {
-  float: right;
-}
-
-#middle .section_bottom .com_main .estimate {
-  width: 100%;
-}
-
-#middle .section_bottom .com_main .estimate > li {
-  width: 100%;
-  border-bottom: 1px solid #DCDCDC;
-  margin-bottom: 8px;
-  overflow: hidden;
-}
-
-#middle .section_bottom .com_main .estimate > li .user_info {
-  float: left;
-  margin-left: 23px;
-}
-
-#middle .section_bottom .com_main .estimate > li .user_info a {
-  font-size: 14px;
-  overflow: hidden;
-  display: block;
-  line-height: 35px;
-  margin-bottom: 4px;
-}
-
-#middle .section_bottom .com_main .estimate > li .user_info a img {
-  display: block;
-  width: 35px;
-  height: 35px;
-  -webkit-border-radius: 35px;
-  -moz-border-radius: 35px;
-  -ms-border-radius: 35px;
-  -o-border-radius: 35px;
-  border-radius: 35px;
-  float: left;
-  margin-right: 5px;
-}
-
-#middle .section_bottom .com_main .estimate > li .user_info p {
-  font-size: 14px;
-  color: #666;
-}
-
-#middle .section_bottom .com_main .estimate > li .estimate_main {
-  float: right;
-  width: 725px;
-  margin-top: 8px;
-  padding-bottom: 7px;
-}
-
-#middle .section_bottom .com_main .estimate > li .estimate_main .ori_estimate {
-  position: relative;
-}
-
-#middle .section_bottom .com_main .estimate > li .estimate_main .ori_estimate > ul {
-  height: 18px;
-  margin-bottom: 9px;
-}
-
-#middle .section_bottom .com_main .estimate > li .estimate_main .ori_estimate > ul li {
-  float: left;
-  width: 18px;
-  height: 18px;
-  background-image: url(../images/hx_icon.png);
-}
-
-#middle .section_bottom .com_main .estimate > li .estimate_main .ori_estimate > p {
-  color: #030303;
-  font-size: 14px;
-  line-height: 30px;
-}
-
-#middle .section_bottom .com_main .estimate > li .estimate_main .ori_estimate > span {
-  color: #666;
-  font-size: 14px;
-  line-height: 38px;
-}
-
-#middle .section_bottom .com_main .estimate > li .estimate_main .ori_estimate .good,
-#middle .section_bottom .com_main .estimate > li .estimate_main .ori_estimate .msg {
-  position: absolute;
-  cursor: pointer;
-  bottom: 7px;
-  line-height: 25px;
-  color: #666;
-  font-size: 14px;
-}
-
-#middle .section_bottom .com_main .estimate > li .estimate_main .ori_estimate .good img,
-#middle .section_bottom .com_main .estimate > li .estimate_main .ori_estimate .msg img {
-  vertical-align: top;
-  margin-right: 5px;
-}
-
-#middle .section_bottom .com_main .estimate > li .estimate_main .ori_estimate .good {
-  left: 612px;
-}
-
-#middle .section_bottom .com_main .estimate > li .estimate_main .ori_estimate .msg {
-  left: 671px;
-}
-
-#middle .section_bottom .com_main .estimate > li .estimate_main .add_estimate {
-  border-top: 1px solid #DCDCDC;
-  padding: 8px 0 12px 0;
-}
-
-#middle .section_bottom .com_main .estimate > li .estimate_main .add_estimate > h4 {
-  color: #666;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 30px;
-}
-
-#middle .section_bottom .com_main .estimate > li .estimate_main .add_estimate > p {
-  color: #030303;
-  font-size: 14px;
-  line-height: 30px;
-}
-
-#middle .section_bottom .com_main .estimate > li:first-of-type {
-  padding-top: 20px;
-}
-
-#middle .section_bottom .com_main .page {
-  width: 100%;
-  margin-top: 35px;
-  text-align: center;
-}
-
-#middle .section_bottom .com_main .page ul {
-  display: inline-block;
-}
-
-#middle .section_bottom .com_main .page ul li {
-  height: 17px;
-  float: left;
-  margin: 0 6px;
-}
-
-#middle .section_bottom .com_main .page ul a {
-  display: block;
-  line-height: 17px;
-  text-align: center;
-  padding: 0 5px;
-  font-size: 14px;
-}
-
-#middle .section_bottom .com_main .page ul .on a {
-  background-color: #B90101;
-  color: #fff;
-}
-
-#middle .section_bottom .com_main .page ul li:hover a {
-  background-color: #B90101;
-  color: #fff;
-}
-
-#middle .section_bottom .com_main .page ul li:nth-last-of-type(2) :hover {
-  background-color: transparent;
-  color: #666;
 }
