--- a/css/pro_details.scss
+++ b/css/pro_details.scss
@@ -520,219 +520,10 @@ $telFontSize:36px;
                 }
             }
         }
-        .com_main {
+        .pro_main {
             overflow: hidden;
             width: 937px;
             padding-top: 27px;
-            >h3 {
-                height: 49px;
-                width: 906px;
-                padding-left: 31px;
-                color: $navClassifyChildAndTitleColor;
-                font-size: $proH4AndbottomH4AndDtAndServiceFontSize;
-                line-height: 49px;
-                background-color: #E5E5E5;
-            }
-            .summary {
-                width: 100%;
-                overflow: hidden;
-                .grade {
-                    border: 1px solid #aaa;
-                    width: 88px;
-                    height: 134px;
-                    padding-left: 45px;
-                    margin-right: 11px;
-                    float: left;
-                    >h5 {
-                        font-weight: normal;
-                        font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
-                        color: #333;
-                        margin-top: 38px;
-                    }
-                    >span {
-                        font-weight: bold;
-                        font-size: 40px;
-                        color: $activeBgColor;
-                        display: block;
-                        i {
-                            font-style: normal;
-                            font-size: 24px;
-                            font-weight: normal;
-                        }
-                    }
-                }
-                >ul {
-                    overflow: hidden;
-                    float: left;
-                    width: 789px;
-                    margin-top: 19px;
-                    li {
-                        float: left;
-                        margin: 5px 5px 5px 0;
-                        border: 1px solid $topAndFooterBgColor;
-                        color: #999;
-                        height: 20px;
-                        padding: 0 10px;
-                        line-height: 20px;
-                        font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
-                    }
-                }
-            }
-            .sort {
-                width: calc(100% - 28px);
-                height: 35px;
-                padding: 0 14px;
-                background-color: #F2F2F2;
-                li {
-                    height: 35px;
-                    float: left;
-                    margin: 0 21px;
-                    a {
-                        line-height: 35px;
-                        display: block;
-                        height: 100%;
-                        color: $topAndNavColor;
-                        font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
-                    }
-                }
-                li:last-of-type {
-                    float: right;
-                }
-            }
-            .estimate {
-                width: 100%;
-                >li {
-                    width: 100%;
-                    border-bottom: 1px solid #DCDCDC;
-                    margin-bottom: 8px;
-                    overflow: hidden;
-                    .user_info {
-                        float: left;
-                        margin-left: 23px;
-                        a {
-                            font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
-                            overflow: hidden;
-                            display: block;
-                            line-height: 35px;
-                            margin-bottom: 4px;
-                            img {
-                                display: block;
-                                width: 35px;
-                                height: 35px;
-                                @include border-radius(35px);
-                                float: left;
-                                margin-right: 5px;
-                            }
-                        }
-                        p {
-                            font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
-                            color: $topAndNavColor;
-                        }
-                    }
-                    .estimate_main {
-                        float: right;
-                        width: 725px;
-                        margin-top: 8px;
-                        padding-bottom: 7px;
-                        .ori_estimate {
-                            position: relative;
-                            >ul {
-                                height: 18px;
-                                margin-bottom: 9px;
-                                li {
-                                    float: left;
-                                    width: 18px;
-                                    height: 18px;
-                                    background-image: url(../images/hx_icon.png)
-                                }
-                            }
-                            >p {
-                                color: #030303;
-                                font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
-                                line-height: 30px;
-                            }
-                            >span {
-                                color: $topAndNavColor;
-                                font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
-                                line-height: 38px;
-                            }
-                            .good,
-                            .msg {
-                                position: absolute;
-                                cursor: pointer;
-                                bottom: 7px;
-                                line-height: 25px;
-                                color: $topAndNavColor;
-                                font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
-                                img {
-                                    vertical-align: top;
-                                    margin-right: 5px;
-                                }
-                            }
-                            .good {
-                                left: 612px;
-                            }
-                            .msg {
-                                left: 671px;
-                            }
-                        }
-                        .add_estimate {
-                            border-top: 1px solid #DCDCDC;
-                            padding: 8px 0 12px 0;
-                            >h4 {
-                                color: $topAndNavColor;
-                                font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
-                                font-weight: normal;
-                                line-height: 30px;
-                            }
-                            >p {
-                                color: #030303;
-                                font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
-                                line-height: 30px;
-                            }
-                        }
-                    }
-                }
-                >li:first-of-type {
-                    padding-top: 20px;
-                }
-            }
-            .page {
-                width: 100%;
-                margin-top: 35px;
-                text-align: center;
-                ul {
-                    display: inline-block;
-                    li {
-                        height: 17px;
-                        float: left;
-                        margin: 0 6px;
-                    }
-                    a {
-                        display: block;
-                        line-height: 17px;
-                        text-align: center;
-                        padding: 0 5px;
-                        font-size: $navClassifyLiAndproSpanAndDlAndTimeFontSize;
-                    }
-                    .on {
-                        a {
-                            background-color: $activeBgColor;
-                            color: #fff;
-                        }
-                    }
-                    li:hover {
-                        a {
-                            background-color: $activeBgColor;
-                            color: #fff;
-                        }
-                    }
-                    li:nth-last-of-type(2) :hover {
-                        background-color: transparent;
-                        color: $topAndNavColor;
-                    }
-                }
-            }
         }
     }
 }
