--- a/css/index.scss
+++ b/css/index.scss
@@ -35,7 +35,7 @@ $telFontSize:36px;
     background: url(../images/body_bgimg.png) repeat-y;
     background-size: 100%;
     padding-bottom: 1px;
-    /*轮播图banner*/
+    //轮播图banner
     .wrapper {
         height: 600px;
         width: 100%;
@@ -93,8 +93,8 @@ $telFontSize:36px;
             }
         }
     }
-    /*轮播图banner end*/
-    /*new_goods*/
+    //轮播图banner end
+    //new_goods
     .new_goods,
     .hot_goods,
     .re_goods,
@@ -197,5 +197,5 @@ $telFontSize:36px;
             }
         }
     }
-    /*new_goods end*/
+    //new_goods end
 }
