--- a/css/public.css
+++ b/css/public.css
@@ -38,17 +38,8 @@ li {
   list-style: none;
 }
 
-/*header*/
 #header {
   width: 100%;
-  /*top*/
-  /*top end*/
-  /*in_tbody*/
-  /*in_tbody end*/
-  /*tbody*/
-  /*tbody end*/
-  /*nav*/
-  /*nav end*/
 }
 
 #header .top {
@@ -415,8 +406,6 @@ li {
   color: #fff;
 }
 
-/*header end*/
-/*middle*/
 #middle {
   background-color: #fff;
   overflow: hidden;
@@ -448,8 +437,57 @@ li {
   color: #B90101;
 }
 
-/*middle end*/
-/*footer*/
+#middle .you_like {
+  text-align: center;
+  margin: 35px 0 60px 0;
+}
+
+#middle .you_like > h3 {
+  height: 38px;
+  line-height: 38px;
+  padding-left: 18px;
+  background-color: #EEE;
+  font-size: 16px;
+  color: #666;
+  text-align: left;
+}
+
+#middle .you_like > ul {
+  overflow: hidden;
+  display: inline-block;
+  margin-top: 20px;
+}
+
+#middle .you_like > ul li {
+  float: left;
+  margin: 0 10px;
+}
+
+#middle .you_like > ul li a {
+  display: block;
+}
+
+#middle .you_like > ul li a img {
+  display: block;
+  width: 100%;
+}
+
+#middle .you_like > ul li span {
+  display: block;
+  text-align: center;
+  font-size: 24px;
+  color: #a40a0a;
+  margin-top: 25px;
+}
+
+#middle .you_like > ul li:first-of-type {
+  margin-left: 0px;
+}
+
+#middle .you_like > ul li:last-of-type {
+  margin-right: 0px;
+}
+
 #footer {
   width: 100%;
   height: 345px;
@@ -580,5 +618,3 @@ li {
   font-size: 14px;
   color: #010101;
 }
-
-/*footer end*/
