--- a/css/pro_details.css
+++ b/css/pro_details.css
@@ -360,6 +360,7 @@
 
 #middle .shop_area .shop_search button {
   float: left;
+  cursor: pointer;
 }
 
 #middle .shop_area .shop_search button img {
