--- a/css/pro_details.scss
+++ b/css/pro_details.scss
@@ -332,6 +332,7 @@ $telFontSize:36px;
             }
             button {
                 float: left;
+                cursor: pointer;
                 img {
                     display: block;
                 }
