--- a/css/public.scss
+++ b/css/public.scss
@@ -21,7 +21,7 @@ $telFontSize:36px;
 * {
     margin: 0;
     padding: 0;
-    // font-family: $navAndClassifyFontFamily;
+    font-family: $navAndClassifyFontFamily;
 }
 
 input,
