--- a/css/public.scss
+++ b/css/public.scss
@@ -315,7 +315,7 @@ li {
                     font-size: $navAndTitleAndSearchFontSize;
                     display: block;
                     height: 100%;
-                    margin: 0 39px 0 39px;
+                    padding: 0 39px 0 39px;
                 }
             }
             li:hover {
