--- a/css/pro_details.scss
+++ b/css/pro_details.scss
@@ -239,7 +239,7 @@ $telFontSize:36px;
                     width: 16px;
                     height: 39px;
                     .add,
-                    .minus {
+                    .down {
                         text-align: center;
                         line-height: 20px;
                         font-size: $proH4AndbottomH4AndDtAndServiceFontSize;
@@ -254,7 +254,7 @@ $telFontSize:36px;
                     .add {
                         border-bottom: none;
                     }
-                    .minus {
+                    .down {
                         height: 21px;
                     }
                 }
